force-app/main/default/objects/Lead/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Salutation field, will be put on contact record at conversion</description>
    <inlineHelpText>Salutation field, will be put on contact record at conversion</inlineHelpText>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>