force-app/main/default/objects/Lead/fields/Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Type__c</fullName>
    <label>Student Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>