force-app/main/default/objects/Lead/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <description>Populates the Name of the Sales Territory</description>
    <formula>Collections_Territory__r.DRD_Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>