force-app/main/default/objects/Lead/recordTypes/Biomed_Recruitment.recordType-meta.xml
<RecordType>
    <fullName>Biomed_Recruitment</fullName>
    <active>true</active>
    <businessProcess>Biomed Recruitment Lead Process</businessProcess>
    <description>Default record type for manually created leads.</description>
    <label>Biomed Recruitment</label>
</RecordType>