force-app/main/default/objects/Lead/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <businessProcess>Biomed Lead Process Master</businessProcess>
    <description>Default lead record type</description>
    <label>Lead</label>
</RecordType>