force-app/main/default/objects/Lead/recordTypes/LSL.recordType-meta.xml
<RecordType>
    <fullName>LSL</fullName>
    <active>true</active>
    <businessProcess>Biomed Lead Process Master</businessProcess>
    <description>Leaders Save Lives (LSL) program lead record type.</description>
    <label>LSL</label>
</RecordType>