force-app/main/default/objects/Lead/recordTypes/Market_Manager.recordType-meta.xml
<RecordType>
    <fullName>Market_Manager</fullName>
    <active>true</active>
    <businessProcess>Market Manager Process</businessProcess>
    <description>Record Type used when a lead is determined as unqualified and moved to the Market Manager for review</description>
    <label>Market Manager</label>
</RecordType>