force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.ZIP</columns>
    <columns>Rating_Visual__c</columns>
    <columns>Lead_Stage_Status__c</columns>
    <columns>Comments__c</columns>
    <columns>Lead_Region_Name__c</columns>
    <columns>Lead_Collection_Operation__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Blood_Region__c</columns>
    <columns>Campaign_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>*All Leads</label>
</ListView>