force-app/main/default/objects/Lead/listViews/Central_Florida_Lead.listView-meta.xml
<ListView>
    <fullName>Central_Florida_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_Stage_Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Central Florida Lead Queue</label>
    <queue>Central_Florida</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>