force-app/main/default/objects/Lead/listViews/Eastern_New_York_Lead.listView-meta.xml
<ListView>
    <fullName>Eastern_New_York_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_AM_Porfolio__c</columns>
    <columns>Lead_Collection_Operation__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_Stage_Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Eastern New York Lead Queue</label>
    <queue>Eastern_New_York</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>