force-app/main/default/objects/Lead/listViews/Future_Outreach_Lead.listView-meta.xml
<ListView>
    <fullName>Future_Outreach_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_AM_Porfolio__c</columns>
    <columns>Lead_Region_Name__c</columns>
    <columns>Lead_Stage_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Future Outreach</value>
    </filters>
    <label>Future Outreach</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>