force-app/main/default/objects/Lead/listViews/Maine_New_Hampshire_Vermont_Lead.listView-meta.xml
<ListView>
    <fullName>Maine_New_Hampshire_Vermont_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_AM_Porfolio__c</columns>
    <columns>Lead_Collection_Operation__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_Stage_Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Maine New Hampshire &amp; Vermont Lead Queue</label>
    <queue>Maine_New_Hampshire_Vermont</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>