force-app/main/default/objects/Lead/listViews/Market_Manager_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Market_Manager_Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Lead_Stage_Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Market Manager Lead Queue</label>
    <queue>Market_Manager_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>